# testogl

./: .gitmodules  CMakeLists.txt  gen-cmake.sh  run.bat  run.sh
assets/: basic.frag  basic.vert  light_cube.frag  light_cube.vert
src/: camera.cpp  camera.h  main.cpp  window.cpp  window.h
src/opengl/: gl_buffer.cpp  gl_buffer.h  gl_debug.cpp  gl_debug.h  gl_program.cpp  gl_program.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_vertex_array.cpp  gl_vertex_array.h  layout_element.cpp  layout_element.h  vertex_layout.cpp  vertex_layout.h
